; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/crypto/extr_ap_bus.c_ap_poll_queue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/crypto/extr_ap_bus.c_ap_poll_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ap_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ap_device*, i64*)* @ap_poll_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ap_poll_queue(%struct.ap_device* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ap_device*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  store %struct.ap_device* %0, %struct.ap_device** %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load %struct.ap_device*, %struct.ap_device** %4, align 8
  %8 = load i64*, i64** %5, align 8
  %9 = call i32 @ap_poll_read(%struct.ap_device* %7, i64* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  store i32 %13, i32* %3, align 4
  br label %18

14:                                               ; preds = %2
  %15 = load %struct.ap_device*, %struct.ap_device** %4, align 8
  %16 = load i64*, i64** %5, align 8
  %17 = call i32 @ap_poll_write(%struct.ap_device* %15, i64* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %12
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @ap_poll_read(%struct.ap_device*, i64*) #1

declare dso_local i32 @ap_poll_write(%struct.ap_device*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
